# opencopper

./: .gitignore  CONTRIBUTING.md  PREDICTIONS.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml  daily-brief.yml  pages.yml
data/: paper-book.json  theses-auto.json  theses.yaml
data/news/: hits-2026-06-11.json  hits-2026-06-12.json  hits-2026-06-13.json  hits-2026-06-14.json  hits-2026-06-15.json  hits-2026-06-16.json  hits-2026-06-17.json  hits-2026-06-18.json  hits-2026-06-19.json  hits-2026-06-20.json  hits-2026-06-21.json  hits-2026-06-22.json  hits-2026-06-23.json  hits-2026-06-24.json  hits-2026-06-25.json  hits-2026-06-26.json  hits-2026-06-27.json  hits-2026-06-28.json  hits-2026-06-29.json  hits-2026-06-30.json  hits-2026-07-01.json  hits-2026-07-02.json  (+22 more)
docs/: launch-notes.md  methodology.md  references.md
evals/: ground_truth.yaml
examples/: book.yaml
scenarios/: ai-datacenter-boom.yaml  cobre-panama-restart-2026.yaml  grasberg-2025.yaml  us-refined-tariff-2026.yaml  world-2026.yaml
scripts/: make_social_card.py
tests/: test_balance.py  test_batch.py  test_book_nonmetals.py  test_commodities.py  test_commodity_mc.py  test_evals_reconcile.py  test_export_web.py  test_extract.py  test_factorbook_paper.py  test_futures.py  test_history.py  test_ledger.py  test_linkages_news.py  test_minmod.py  test_montecarlo.py  test_pricing.py  test_products.py  test_quant.py  test_regional.py  test_scenarios.py  test_sensitivity.py  test_signals.py  test_theses_data.py  test_tier3.py
web/: data.js  index.html
(+135 files in other folders)
