[project]
name = "opencopper"
version = "0.1.0"
description = "Open world model of global copper supply and demand: LLM-extracted mine ledger + transparent shock simulator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "plotly>=5.22",
    "pypdf>=5.0",
    "truststore>=0.10.4",
]

[project.scripts]
opencopper = "opencopper.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencopper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
